collectd (4.1.0-1) experimental; urgency=low

  * New upstream release.
    - Added options to collectd2html.pl to specify host and data directory
      (Closes: #438499).
    New plugins:
    - Detailed Linux network interface and routing statistics: netlink
    - Values from SNMP enabled network devices: snmp
    - Bitrate and frequency of music played with XMMS: xmms

 -- Sebastian Harl <sh@tokkee.org>  Sun,  2 Sep 2007 00:56:10 +0200

collectd (4.0.7-1) experimental; urgency=low

  * New upstream release.
  * Disable iptables and nut plugins on hppa as well to work around a FTBFS
    caused by #358637 and presumably #419684 (Closes: #430933).
  * Changed collectd-dbg's section to "utils".
  * Added httpd-cgi to suggested packages.
  * Added documentation of the provided examples to README.Debian, thanks to
    Eduard Bloch for his proposal (Closes: #434182).

 -- Sebastian Harl <sh@tokkee.org>  Fri, 31 Aug 2007 10:04:41 +0200

collectd (4.0.3-1) experimental; urgency=low

  * New upstream release.

 -- Sebastian Harl <sh@tokkee.org>  Tue, 19 Jun 2007 21:41:21 +0100

collectd (4.0.2-1) experimental; urgency=low

  * New upstream release (Closes: #428114).
    - Added large file support (Closes: #422212).
    - Rewrite of the plugin system to allow more flexibility by using
      different types of plugins.
    - Added Nagios plugin to query collectd from Nagios.
    New plugins:
    - Output to "comma separated values" (CSV) files: csv
    - Output to RRD files: rrdtool
    - IO via the network: network
    - External runtime interface: unixsock
    - Embedding a Perl interpreter: perl
    - Logging to files, STDOUT or STDERR: logfile
    - Logging to syslog: syslog
    - Amount of available entropy: entropy
    - Execution of external programs: exec
    - Iptables statistics: iptables (32bit systems only)
    - IRQ counters: irq
    - UPS information: nut (32bit systems only)
  * New binary package collectd-perl (linking against libperl).