@@ -7,8 +7,9 @@ collectd (4.1.0-1) experimental; urgency=low
     - Detailed Linux network interface and routing statistics: netlink
     - Values from SNMP enabled network devices: snmp
     - Bitrate and frequency of music played with XMMS: xmms
+  * Updated init script to wait for collectd to shut down (Closes: #422208).
 
- -- Sebastian Harl <sh@tokkee.org>  Sun,  2 Sep 2007 00:56:10 +0200
+ -- Sebastian Harl <sh@tokkee.org>  Sun,  2 Sep 2007 15:24:40 +0200
 
 collectd (4.0.7-1) experimental; urgency=low
 
